# blocks

./: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: gh-pages.yaml
.zed/: tasks.json
assets/: texture-atlas.xcf
blocks/: Cargo.toml
blocks-game/: Cargo.toml
blocks-game/src/: bounding_box.rs  chunk.rs  lib.rs  player.rs  subchunk.rs  util.rs
blocks-game/src/generation/: mod.rs  noise.rs  random.rs
blocks-game/src/terrain/: block.rs  chunk.rs  mod.rs  subchunk.rs
blocks-game/src/terrain/generation/: mod.rs
blocks-renderer/: Cargo.toml
blocks-renderer/src/: camera.rs  clock.rs  lib.rs  ray_casting.rs  texture.rs  voxel_renderer.rs  voxel_shader.wgsl
blocks-renderer/src/hud_renderer/: hud_shader.wgsl  mod.rs
blocks-renderer/src/voxel_renderer/: chunk_neighborhood.rs  mod.rs  voxel_shader.wgsl
blocks-web/: Cargo.toml
blocks-web/src/: lib.rs  shader.wgsl
blocks/src/: camera.rs  lib.rs  main.rs  shader.wgsl  texture.rs  voxel_renderer.rs
src/: index.scss  index.ts
