[workspace]
resolver = "2"
members = ["blocks", "blocks-game", "blocks-renderer", "blocks-web"]

[workspace.dependencies]
bytemuck = { version = "1.21.0", features = ["derive"] }
glam = { version = "0.29.2", features = ["bytemuck"] }
log = "0.4"
wgpu = { version = "24.0.1", features = ["wgsl"] }
winit = { version = "0.29", features = ["rwh_05"] }

blocks.path = "blocks"
blocks-game.path = "blocks-game"
blocks-renderer.path = "blocks-renderer"
