[package]
name = "blocks-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.77", features = ["Window"] }

log.workspace = true
wgpu = { workspace = true, features = ["webgl"] }
winit.workspace = true

blocks.workspace = true
