[package]
name = "blocks"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.21.0", features = ["derive"] }
pollster = { version = "0.4.0", features = ["macro"] }

log.workspace = true
wgpu.workspace = true
winit.workspace = true
glam = { version = "0.29.2", features = ["bytemuck"] }
